# ejercicios-2018-Favaro99

./: .coveralls.yml  .directory  .gitignore  .travis.yml  CMakeLists.txt  README.md
Estructuras/: CMakeLists.txt  Pila.h
U00_Repaso/: CMakeLists.txt  README.md
U00_Repaso/Ej-01/: Circulo.h  Color.h  Cuadrado.cpp  Cuadrado.h  Geometria.cpp  Geometria.h  Triangulo.h  main.cpp
U00_Repaso/Ej-02/: Calculadora.cpp  Calculadora.h  main.cpp
U00_Repaso/Ej-03/: Calculadora.h  main.cpp
U00_Repaso/Ej-04/: main.cpp
U00_Repaso/Ej-05/: Entero.cpp  Entero.h  main.cpp
U00_Repaso/Ej-06/: main.cpp
U01_Recursividad/: CMakeLists.txt  README.md
U01_Recursividad/Ej-01/: main.cpp  potencia.cpp  potencia.h
U01_Recursividad/Ej-02/: main.cpp  sumatoria.cpp  sumatoria.h
U01_Recursividad/Ej-03/: ackerman.cpp  ackerman.h  main.cpp
U01_Recursividad/Ej-04/: main.cpp  mcd.cpp  mcd.h
U01_Recursividad/Ej-05/: digitos.cpp  digitos.h  main.cpp
U01_Recursividad/Ex-Laberinto/: LaberintoSolver.cpp  LaberintoSolver.h  LaberintoSolver.old  MazeGenerator.cpp  MazeGenerator.h  Nodo.h  Pila.h  main.cpp
U02_Listas/: CMakeLists.txt  README.md
U02_Listas/Ej-01/: fnInvierte.h  main.cpp
U02_Listas/Ej-02/: main.cpp
U02_Listas/Ej-03/: main.cpp
U02_Listas/Ej-04/: main.cpp  union.h
U02_Listas/Ej-05/: CircList.h  main.cpp
U02_Listas/Ej-06/: main.cpp
U02_Listas/Lista/: Lista.h  README.md  main.cpp  nodo.h
U03_Pilas/: CMakeLists.txt  README.md
U03_Pilas/Ej-01/: main.cpp
U03_Pilas/Ej-02/: main.cpp
U03_Pilas/Ej-03/: main.cpp
U03_Pilas/Ej-04/: main.cpp
U03_Pilas/Ej-05/: main.cpp
U03_Pilas/Pila/: Pila.h  README.md  nodo.h
U04_Colas/: CMakeLists.txt
U04_Colas/Cola/: Cola.h  README.md
U04_Colas/Ej-01/: main.cpp
U04_Colas/Ej-02/: main.cpp
U04_Colas/Ej-03/: main.cpp
U04_Colas/Ej-04/: main.cpp
U04_Colas/Ej-05/: ColaPriorida.h  main.cpp
U04_Colas/Ej-06/: ColaPrioridad.h
U05_Arbol/: CMakeLists.txt
U05_Arbol/Arbol/: ArbolBinario.h  ArbolBinarioAVL.h  NodoArbol.h  NodoArbolAVL.h
U05_Arbol/Ej-01/: main.cpp
U05_Arbol/Ej-02/: main.cpp
U05_Arbol/Ej-03/: main.cpp
U05_Hash/: CMakeLists.txt
U05_Hash/HashMap/: HashEntry.h
U06_Arbol/: CMakeLists.txt
U06_Arbol/Arbol/: ArbolBinario.h
U06_Arbol/Ej-01/: main.cpp
U06_Hash/: CMakeLists.txt  README.md
U06_Hash/Ej-01/: main.cpp
U06_Hash/HashMap/: HashEntry.h  HashMap.h  HashMapConColi.h
U07_Grafos/: CMakeLists.txt
U08_Ordenamiento/: CMakeLists.txt  README.md
U08_Ordenamiento/Ej-01/: main.cpp
U08_Ordenamiento/Ej-03/: main.cpp
U08_Ordenamiento/Ej-04/: main.cpp
U09_Busqueda/: CMakeLists.txt
test/: CMakeLists.txt
test/U00_Repaso/: Ej01.cpp  Ej02.cpp  Ej03.cpp  Ej04.cpp  Ej05.cpp  Ej06.cpp
test/U01_Recursividad/: Ej01.cpp  Ej02.cpp  Ej03.cpp  Ej04.cpp  Ej05.cpp
test/U02_Listas/: Ej01.cpp  Ej02.cpp  Ej03.cpp  Ej04.cpp  Ej05.cpp  Ej06.cpp  Lista.cpp
test/U03_Pilas/: Ej01.cpp  Ej02.cpp  Ej03.cpp  Ej04.cpp  Ej05.cpp  Pila.cpp
test/U04_Colas/: Colas.cpp  Ej01.cpp  Ej02.cpp  Ej03.cpp  Ej04.cpp  Ej05.cpp
test/U05_Hash/: CMakeLists.txt  Ej01.cpp  Ej02.cpp  Ej03.cpp  HashMap.cpp
test/U06_Arbol/: Arbol.cpp  Ej01.cpp  Ej02.cpp  Ej03.cpp  Ej04.cpp
test/U07_Grafos/: Ej01.cpp  Ej02.cpp  Ej03.cpp
test/U08_Ordenamiento/: Ej01.cpp  Ej02.cpp  Ej03.cpp  Ej04.cpp  Ej05.cpp
test/U09_Busqueda/: Ej01.cpp  Ej02.cpp  Ej03.cpp  Ej04.cpp  Ej05.cpp
