cmake_minimum_required(VERSION 3.14)
project(Programación)

set(CMAKE_CXX_STANDARD 14)

add_executable(EJ1 main1.cpp Pila.h Cola.h Lista.h nodo.h)
add_executable(EJ2 main2.cpp Pila.h Cola.h Lista.h nodo.h)
add_executable(EJ3 main3.cpp Pila.h Cola.h Lista.h nodo.h)
add_executable(EJ3 main4.cpp Pila.h Cola.h Lista.h nodo.h)