add_executable(U00-E01 Ej-01/main.cpp Ej-01/Geometria.cpp Ej-01/Cuadrado.cpp Ej-01/Triangulo.cpp Ej-01/Circulo.cpp Ej-01/Color.cpp)

add_executable(U00-E02 Ej-02/main.cpp Ej-02/Calculadora.cpp)

add_executable(U00-E03 Ej-03/main.cpp Ej-03/Calculadora.cpp)

add_executable(U00-E04 Ej-04/main.cpp)

add_executable(U00-E05 Ej-05/main.cpp Ej-05/Entero.cpp)

add_executable(U00-E06  Ej-06/main.cpp)