set(SOURCE_FILES_01 Ej-01/main.cpp Ej-01/potencia.cpp)
add_executable(U01-E01 ${SOURCE_FILES_01})

set(SOURCE_FILES_02 Ej-02/main.cpp Ej-02/sumatoria.cpp)
add_executable(U01-E02 ${SOURCE_FILES_02})

set(SOURCE_FILES_03 Ej-03/main.cpp Ej-03/ackerman.cpp)
add_executable(U01-E03 ${SOURCE_FILES_03})

set(SOURCE_FILES_04 Ej-04/main.cpp Ej-04/mcd.cpp )
add_executable(U01-E04 ${SOURCE_FILES_04})

set(SOURCE_FILES_05 Ej-05/main.cpp Ej-05/digitos.cpp)
add_executable(U01-E05 ${SOURCE_FILES_05})
