add_executable(U02-E01 Ej-01/main.cpp Lista/Lista.h Ej-01/fnInvierte.h)

add_executable(U02-E02 Ej-02/main.cpp)

add_executable(U02-E03 Ej-03/main.cpp)

add_executable(U02-E04 Ej-04/main.cpp Ej-04/union.h)

add_executable(U02-E05 Ej-05/main.cpp Ej-05/CircList.h)

add_executable(U02-E06 Ej-06/main.cpp)

add_executable(U02-ListaMain Lista/main.cpp)