set(SOURCE_FILES_01 Ej-01/main.cpp Pila/Pila.h)
add_executable(U03-E01 ${SOURCE_FILES_01})

set(SOURCE_FILES_02 Ej-02/main.cpp)
add_executable(U03-E02 ${SOURCE_FILES_02})

set(SOURCE_FILES_03 Ej-03/main.cpp)
add_executable(U03-E03 ${SOURCE_FILES_03})

set(SOURCE_FILES_04 Ej-04/main.cpp)
add_executable(U03-E04 ${SOURCE_FILES_04})

set(SOURCE_FILES_05 Ej-05/main.cpp)
add_executable(U03-E05 ${SOURCE_FILES_05})
