set(SOURCE_FILES_01 Ej-01/main.cpp Arbol/ArbolBinario.h)
add_executable(U06-E01 ${SOURCE_FILES_01})

set(SOURCE_FILES_02 Ej-02/main.cpp)
add_executable(U06-E02 ${SOURCE_FILES_02})

set(SOURCE_FILES_03 Ej-03/main.cpp)
add_executable(U06-E03 ${SOURCE_FILES_03})

set(SOURCE_FILES_04 Ej-04/main.cpp)
add_executable(U06-E04 ${SOURCE_FILES_04})

